--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@popperjs/core": "^2.11.8",
         "postcss-loader": "^7.3.3",
         "sass-loader": "^13.3.2"
     }
