--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "engines": {
-        "node": ">= 12.0.0"
+        "node": "v20.3",
+        "npm": "v8.3.0"
     },
 
     "devDependencies": {
